Ignore a new test-rmd script
This file is for cut/pasting specific parts of the output-plots.Rmd for testing code. The full document takes too long to render for small, section specific changes

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@
 
 # ignore anything in the scratch folder (personal sandboxes)
 98-scratch/*
+
+# ignore the test Rmd script
+03-post-process/test-rmd.Rmd
